--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: java
+jdk: oraclejdk8
 script:
-- "mvn test"
-- "mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V"
+- mvn test
+- mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
