--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
     <groupId>java_ee_labs</groupId>
-    <artifactId>java_ee_lab_first_term</artifactId>
+    <artifactId>java_ee_labs</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
